flche-ingress/old/flche-ingress2.yaml
# namespace: wordpress-flche
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"        
  name: flche-ingress2
  namespace: wordpress-flche
spec:
  rules:
  - host: flche.kaiser.guru
    http:
      paths:
      - backend:
          service:
            name: wordpress-flche
            port:
              number: 80
        path: /(.*)
        pathType: Prefix
  tls:
  - hosts:
    - flche.kaiser.guru
    secretName: flche-tls-secret2
