flche-ingress/old/rancher-ingress.yaml
# namespace: cattle-system
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"        
  name: rancher
  namespace: cattle-system
spec:
  rules:
  - host: rancher.flche.kaiser.guru
    http:
      paths:
      - backend:
          service:
            name: rancher
            port:
              number: 80
        path: /(.*)
        pathType: Prefix
  tls:
  - hosts:
    - rancher.flche.kaiser.guru
    secretName: tls-rancher-ingress
